modified searchByInitialClan